feat: 게시물 댓글 응답 dto 수정