@@ -1,7 +1,10 @@
 package com.bb3.bodybuddybe.comment.dto;
 
 import com.bb3.bodybuddybe.comment.entity.Comment;
+import com.bb3.bodybuddybe.like.entity.CommentLike;
+import com.bb3.bodybuddybe.user.dto.AuthorDto;
 import com.bb3.bodybuddybe.user.dto.ProfileResponseDto;
+import com.bb3.bodybuddybe.user.entity.User;
 import lombok.Getter;
 
 import java.time.LocalDateTime;
@@ -12,23 +15,31 @@ import java.util.stream.Collectors;
 @Getter
 public class CommentResponseDto {
     private Long id;
+    private Long postId;
     private String content;
+    private AuthorDto author;
     private LocalDateTime createdAt;
     private LocalDateTime modifiedAt;
-    private ProfileResponseDto author;
+    private List<Long> likedUserIds;
     private List<CommentResponseDto> children;
 
     public CommentResponseDto(Comment comment) {
         this.id = comment.getId();
+        this.postId = comment.getPost().getId();
         this.content = comment.getContent();
+        this.author = new AuthorDto(comment.getAuthor());
         this.createdAt = comment.getCreatedAt();
         this.modifiedAt = comment.getModifiedAt();
-        this.author = new ProfileResponseDto(comment.getAuthor());
+        this.likedUserIds = comment.getLikes()
+                .stream()
+                .map(CommentLike::getUser)
+                .map(User::getId)
+                .toList();
         this.children = comment.getChildren()
                 .stream()
                 .map(CommentResponseDto::new)
-                .sorted(Comparator.comparing(CommentResponseDto::getCreatedAt).reversed())
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(CommentResponseDto::getCreatedAt))
+                .toList();
     }
 }
 
